--- a/app.wxss
+++ b/app.wxss
@@ -7,6 +7,7 @@ page {
   --blue-3: #C6EFFF;
   --blue-linear-1: linear-gradient(135deg, #76DCFF 0%, #05A8FF 100%);
   --blue-linear-2: linear-gradient(180deg, #0d61d7 0%, #063e82 100%);
+  --blue-linear-3: linear-gradient(128deg, #53678d 0%, #161F4E 100%);
   --gray-1: #595959;
   --gold-1: rgb(224, 214, 203);
 }
