--- a/components/address-popup/index.wxss
+++ b/components/address-popup/index.wxss
@@ -44,11 +44,11 @@
 .default-icon {
   margin-left: 24rpx;
   padding: 6rpx 8rpx;
-  color: #1986F8;
+  color: var(--blue-1);
   font-size: 20rpx;
   line-height: 1;
   border-radius: 8rpx;
-  border: 2rpx solid #1986F8;
+  border: 2rpx solid var(--blue-1);
 }
 .address-detail {
   margin-top: 16rpx;
