--- a/pages/subpages/common/register/index.wxml
+++ b/pages/subpages/common/register/index.wxml
@@ -20,9 +20,9 @@
       <image class="arrow" src="./images/arrow.png" />
     </button>
     <view class="agreement-tips">
-      <checkbox class="checkbox" checked="{{agree}}" bindtap="toggleAgree" color="#0095fa" />
+      <checkbox class="checkbox" checked="{{agree}}" bindtap="toggleAgree" color="#09AFFF" />
       <text>开启旅途，阅读并同意</text>
-      <text style="color: #0095fa;" bindtap="checkAgreement">《用户服务协议》</text>
+      <text style="color: #09AFFF;" bindtap="checkAgreement">《用户服务协议》</text>
     </view>
   </view>
 </view>
