--- a/pages/subpages/common/register/index.wxss
+++ b/pages/subpages/common/register/index.wxss
@@ -50,7 +50,7 @@
   color: #fff;
   font-size: 32rpx;
   font-weight: bold;
-  background: #0095fa;
+  background: var(--blue-1);
   border-radius: 10rpx;
 }
 .arrow {
