--- a/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/qa-list/index.wxss
+++ b/pages/subpages/mall/catering/subpages/restaurant-detail/subpages/qa-list/index.wxss
@@ -25,7 +25,7 @@
   font-size: 20rpx;
   font-weight: bold;
   line-height: 30rpx;
-  background: #1986F8;
+  background: var(--blue-1);
   border-radius: 0 6rpx 6rpx 6rpx;
 }
 .qa-question {
@@ -67,7 +67,7 @@
   font-size: 22rpx;
 }
 .more-check {
-  color: #1986F8;
+  color: var(--blue-1);
   font-size: 22rpx;
 }
 .more-icon {
