--- a/pages/subpages/mine/address/subpages/add/index.wxml
+++ b/pages/subpages/mine/address/subpages/add/index.wxml
@@ -26,7 +26,7 @@
 <view class="card">
   <view class="info-list row between">
     <label class="title">设为默认: </label>
-    <switch style="transform: scale(0.8)" bindchange="toggleDefaultValue" color="#1986F8" />
+    <switch style="transform: scale(0.8)" bindchange="toggleDefaultValue" color="#09AFFF" />
   </view>
 </view>
 
