--- a/pages/tab-bar-pages/mine/components/auth-info-popup/index.wxss
+++ b/pages/tab-bar-pages/mine/components/auth-info-popup/index.wxss
@@ -81,7 +81,7 @@
   color: #fff;
   font-size: 28rpx;
   border-radius: 44rpx;
-  background: #0095fa;
+  background: var(--blue-1);
 }
 
 .cancel-btn {
