--- a/pages/subpages/mine/promoter/subpages/account/subpages/withdraw-result/index.wxml
+++ b/pages/subpages/mine/promoter/subpages/account/subpages/withdraw-result/index.wxml
@@ -1,6 +1,6 @@
 <nav-bar title="提现结果" custom bind:navigateBack="navigateBack" />
 
-<image class="illus" style="margin-top: {{statusBarHeight + 92}}px" src="./images/illus.png" />
+<image class="illus" style="margin-top: {{statusBarHeight + 92}}px" src="https://static.tiddler.cn/mp/default_illus/applaud.png" />
 
 <view class="result-desc">提现申请已提交，具体到账时间以您绑定的收款账户到账时间为准</view>
 
