--- a/pages/subpages/mine/promoter/subpages/customer/index.wxss
+++ b/pages/subpages/mine/promoter/subpages/customer/index.wxss
@@ -38,12 +38,7 @@
   height: 48rpx;
   color: #fff;
   font-size: 24rpx;
-  background: linear-gradient(
-    135deg,
-    #ffa266 0%,
-    #ff3d39 64%,
-    #ff3636 100%
-  );
+  background: var(--blue-linear-1);
   border-radius: 24rpx;
 }
 
@@ -64,7 +59,7 @@
 }
 .menu-item.selected {
   position: relative;
-  color: #f5701d;
+  color: var(--blue-1);
   font-size: 30rpx;
   font-weight: bold;
 }
@@ -77,7 +72,7 @@
   height: 6rpx;
   content: "";
   border-radius: 3rpx;
-  background: #f5701d;
+  background: var(--blue-1);
 }
 
 .container {
