--- a/pages/subpages/mine/promoter/subpages/customer/components/customer-item/index.wxml
+++ b/pages/subpages/mine/promoter/subpages/customer/components/customer-item/index.wxml
@@ -6,9 +6,6 @@
     <view class="info">
       <view class="name">{{ item.nickname }}</view>
       <view class="mobile">{{ mobile }}</view>
-      <view class="num-desc" wx:if="{{item.level}}">
-        诚信星球第{{ item.promoterId }}号乡村振兴推荐官
-      </view>
     </view>
   </view>
   <view class="data-wrap">
@@ -18,9 +15,9 @@
     </view>
   </view>
   <view
-    class="identity-tag {{['promoter', 'c1', 'c2', 'c3'][item.level - 1]}}"
+    class="identity-tag level_{{item.level}}"
     wx:if="{{item.level}}"
   >
-    {{ ["推荐官", "c1", "c2", "c3"][item.level - 1] }}
+    家乡代言人Lv.{{ item.level }}
   </view>
 </view>
