--- a/pages/subpages/mine/promoter/subpages/account/index.wxml
+++ b/pages/subpages/mine/promoter/subpages/account/index.wxml
@@ -4,7 +4,7 @@
 <view class="nav-bar {{navBarBgVisible ? 'show-bg' : ''}}" style="padding-top: {{statusBarHeight}}px;">
   <view class="nav-bar-inner">
     <back-icon />
-    <view class="nav-bar-title">我的账户</view>
+    <view class="nav-bar-title">我的奖励</view>
   </view>
 </view>
 
