--- a/pages/subpages/mine/promoter/subpages/customer/components/customer-item/index.wxss
+++ b/pages/subpages/mine/promoter/subpages/customer/components/customer-item/index.wxss
@@ -58,24 +58,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 92rpx;
+  padding: 0 18rpx;
   height: 44rpx;
   font-size: 20rpx;
   border-radius: 0 16rpx 0 16rpx;
 }
-.identity-tag.promoter {
-  color: #f5701d;
-  background: #fff7e6;
-}
-.identity-tag.c1 {
+.identity-tag.level_1 {
   color: #0dc1e2;
   background: #ebfcff;
 }
-.identity-tag.c2 {
+.identity-tag.level_2 {
   color: #00aa5a;
   background: #dff7ec;
 }
-.identity-tag.c3 {
+.identity-tag.level_3 {
   color: #ff4747;
   background: #ffebeb;
+}
+.identity-tag.level_4 {
+  color: #f5701d;
+  background: #fff7e6;
 }
