--- a/pages/subpages/mine/promoter/subpages/customer/components/customer-item/index.wxss
+++ b/pages/subpages/mine/promoter/subpages/customer/components/customer-item/index.wxss
@@ -63,19 +63,19 @@
   font-size: 20rpx;
   border-radius: 0 16rpx 0 16rpx;
 }
-.identity-tag.level_1 {
+.identity-tag.level-1 {
   color: #0dc1e2;
   background: #ebfcff;
 }
-.identity-tag.level_2 {
+.identity-tag.level-2 {
   color: #00aa5a;
   background: #dff7ec;
 }
-.identity-tag.level_3 {
+.identity-tag.level-3 {
   color: #ff4747;
   background: #ffebeb;
 }
-.identity-tag.level_4 {
+.identity-tag.level-4 {
   color: #f5701d;
   background: #fff7e6;
 }
