--- a/pages/subpages/mine/promoter/index.wxml
+++ b/pages/subpages/mine/promoter/index.wxml
@@ -28,10 +28,10 @@
             <view class="progress-wrap" wx:if="{{userInfo.level === index + 1}}">
               <view class="progress-bar-wrap row">
                 <view class="progress-bar row">
-                  <view class="progress-bar-inner level_{{index + 1}}" style="width: 30%;">
+                  <view class="progress-bar-inner level-{{index + 1}}" style="width: 30%;">
                     <view class="proportion-tag row">4000/30000</view>
                   </view>
-                  <view class="progress-bar-inner stripe level_{{index + 1}}" style="width: 20%;">
+                  <view class="progress-bar-inner stripe level-{{index + 1}}" style="width: 20%;">
                     <view class="proportion-tag row">20/100</view>
                   </view>
                 </view>
