--- a/pages/subpages/mine/promoter/index.wxss
+++ b/pages/subpages/mine/promoter/index.wxss
@@ -19,22 +19,22 @@
 }
 .nav-bar-wrap.show-bg.level-1 {
   background-image: 
-    url("https://static.tiddler.cn/mp/promoter/level_1/bg.png"), 
+    url("https://static.tiddler.cn/mp/promoter/level-1/bg.png"), 
     linear-gradient(180deg, #EDF6FE 20%, #FFFFFF 55%);
 }
 .nav-bar-wrap.show-bg.level-2 {
    background-image: 
-    url("https://static.tiddler.cn/mp/promoter/level_2/bg.png"), 
+    url("https://static.tiddler.cn/mp/promoter/level-2/bg.png"), 
     linear-gradient(180deg, #EDFEEF 20%, #FFFFFF 55%);
 }
 .nav-bar-wrap.show-bg.level-3 {
    background-image: 
-    url("https://static.tiddler.cn/mp/promoter/level_3/bg.png"), 
+    url("https://static.tiddler.cn/mp/promoter/level-3/bg.png"), 
     linear-gradient(180deg, #F3EDFE 20%, #FFFFFF 55%);
 }
 .nav-bar-wrap.show-bg.level-4 {
    background-image: 
-    url("https://static.tiddler.cn/mp/promoter/level_4/bg.png"), 
+    url("https://static.tiddler.cn/mp/promoter/level-4/bg.png"), 
     linear-gradient(333deg, rgba(255,255,255,0) 50%, #FFFFFF 100%);
 }
 .nav-bar {
@@ -58,22 +58,22 @@
 }
 .container.level-1 {
   background-image: 
-    url("https://static.tiddler.cn/mp/promoter/level_1/bg.png"), 
+    url("https://static.tiddler.cn/mp/promoter/level-1/bg.png"), 
     linear-gradient(180deg, #EDF6FE 20%, #FFFFFF 55%);
 }
 .container.level-2 {
    background-image: 
-    url("https://static.tiddler.cn/mp/promoter/level_2/bg.png"), 
+    url("https://static.tiddler.cn/mp/promoter/level-2/bg.png"), 
     linear-gradient(180deg, #EDFEEF 20%, #FFFFFF 55%);
 }
 .container.level-3 {
    background-image: 
-    url("https://static.tiddler.cn/mp/promoter/level_3/bg.png"), 
+    url("https://static.tiddler.cn/mp/promoter/level-3/bg.png"), 
     linear-gradient(180deg, #F3EDFE 20%, #FFFFFF 55%);
 }
 .container.level-4 {
    background-image: 
-    url("https://static.tiddler.cn/mp/promoter/level_4/bg.png"), 
+    url("https://static.tiddler.cn/mp/promoter/level-4/bg.png"), 
     linear-gradient(180deg, #FEF4EA 20%, #FFFFFF 55%);
 }
 
@@ -156,10 +156,10 @@
 .progress-bar-inner.stripe {
   border-radius: 0 8rpx 8rpx 0;
 }
-.progress-bar-inner.level_1 {
+.progress-bar-inner.level-1 {
   background: #7CDFFF;
 }
-.progress-bar-inner.stripe.level_1 {
+.progress-bar-inner.stripe.level-1 {
   background: repeating-linear-gradient(
     135deg,
     #fff,    
@@ -168,10 +168,10 @@
     #C6EFFF 8rpx
   );
 }
-.progress-bar-inner.level_2 {
+.progress-bar-inner.level-2 {
   background: #7CDF9B;
 }
-.progress-bar-inner.stripe.level_2 {
+.progress-bar-inner.stripe.level-2 {
   background: repeating-linear-gradient(
     135deg,
     #fff,    
@@ -180,10 +180,10 @@
     #A8E494 8rpx
   );
 }
-.progress-bar-inner.level_3 {
+.progress-bar-inner.level-3 {
   background: #BA66DF;
 }
-.progress-bar-inner.stripe.level_3 {
+.progress-bar-inner.stripe.level-3 {
   background: repeating-linear-gradient(
     135deg,
     #fff,    
@@ -192,10 +192,10 @@
     #DD76D3 8rpx
   );
 }
-.progress-bar-inner.level_4 {
+.progress-bar-inner.level-4 {
   background: #f2dbb0;
 }
-.progress-bar-inner.stripe.level_4 {
+.progress-bar-inner.stripe.level-4 {
   background: repeating-linear-gradient(
     135deg,
     #fff,    
