--- a/custom-tab-bar/index.wxss
+++ b/custom-tab-bar/index.wxss
@@ -1,17 +1,17 @@
 .tab-bar {
   position: fixed;
-  left: 50%;
-  bottom: 48rpx;
-  transform: translateX(-50%);
+  left: 0;
+  bottom: 0;
   display: flex;
   align-items: center;
-  padding: 0 10rpx;
-  width: calc(100% - 96rpx);
-  height: 110rpx;
-  border-radius: 55rpx;
-  box-shadow: 0px 1px 12px 0px rgba(0,0,0,0.1);
-  background: rgba(255, 255, 255, 0.68);
+  padding-bottom: 30rpx;
+  width: 100%;
+  height: 108rpx;
+  box-sizing: initial;
+  border-radius: 58rpx 58rpx 0 0;
+  background: rgba(255, 255, 255, 0.8);
   backdrop-filter: blur(8px);
+  box-shadow: 0 -1px 12px 0 rgba(0, 0, 0, 0.1);
   z-index: 100;
 }
 
@@ -28,13 +28,14 @@
   height: 48rpx;
 }
 .text {
-  margin-top: 6rpx;
+  margin-top: 8rpx;
   font-size: 18rpx;
   color: #707070;
   line-height: 1;
 }
 .text.selected {
   color: #333;
+  font-weight: 500;
 }
 
 .promoter-tab {
