--- a/pages/tab-bar-pages/mine/index.wxss
+++ b/pages/tab-bar-pages/mine/index.wxss
@@ -184,7 +184,7 @@
 }
 
 .works-wrap {
-  padding-bottom: calc(48px + env(safe-area-inset-bottom));
+  padding-bottom: 138rpx;
   background: #fff;
   box-shadow: 0 -40px 20px -2px #f0f0f0;
 }
