--- a/pages/tab-bar-pages/promoter/index.wxss
+++ b/pages/tab-bar-pages/promoter/index.wxss
@@ -1,5 +1,5 @@
 .container {
-  padding-bottom: calc(142rpx + env(safe-area-inset-bottom));
+  padding-bottom: 170rpx;
   font-size: 0;
   background: #fff;
   min-height: 100vh;
