--- a/pages/tab-bar-pages/home/index.wxml
+++ b/pages/tab-bar-pages/home/index.wxml
@@ -78,8 +78,8 @@
           <image class="loading-icon" src="https://static.tiddler.cn/mp/loading.gif" />
           <text>加载中...</text>
         </view>
+        <view class="no-more-tips" wx:if="{{isLoading && finished && mediaList.length}}">～没有更多了～</view>
         <empty-illus wx:if="{{finished && !mediaList.length}}" desc="暂无列表" />
-        <view class="no-more-tips" wx:if="{{finished && mediaList.length}}">～没有更多了～</view>
       </view>
     </scroll-view>
   </swiper-item>
