--- a/pages/tab-bar-pages/mall/index.wxml
+++ b/pages/tab-bar-pages/mall/index.wxml
@@ -29,7 +29,11 @@
   
   <view class="commodity-list">
     <fall-flow list="{{commodityList}}" generic:item="commodity-item" />
+    <view class="loading row center" wx:if="{{commodityList.length && isLoading}}">
+      <image class="loading-icon" src="https://static.tiddler.cn/mp/loading.gif" />
+      <text>加载中...</text>
+    </view>
+    <view class="no-more-tips" wx:if="{{!isLoading && finished && commodityList.length}}">～没有更多了～</view>
     <empty-illus wx:if="{{finished && !commodityList.length}}" desc="暂无列表" />
-    <view class="no-more-tips" wx:if="{{finished && commodityList.length}}">～没有更多了～</view>
   </view>
 </view>
