--- a/pages/tab-bar-pages/mall/index.wxss
+++ b/pages/tab-bar-pages/mall/index.wxss
@@ -84,6 +84,16 @@ page {
   box-shadow: 0 -10px 20px -2px #f0f0f0;
 }
 
+.loading {
+  padding: 16rpx 0 24rpx;
+  color: #999;
+  font-size: 24rpx;
+}
+.loading-icon {
+  width: 48rpx;
+  height: 48rpx;
+}
+
 .no-more-tips {
   padding: 16rpx 0 24rpx;
   color: #999;
