--- a/app.wxss
+++ b/app.wxss
@@ -9,7 +9,7 @@ page {
   --blue-linear-2: linear-gradient(180deg, #0d61d7 0%, #063e82 100%);
   --blue-linear-3: linear-gradient(128deg, #53678d 0%, #161F4E 100%);
   --gray-1: #595959;
-  --gold-1: rgb(224, 214, 203);
+  --gold-1: #e0d6cb;
 }
 
 view, text, image, scroll-view, navigator, swiper, swiper-item {
