--- a/pages/subpages/gift/index.wxss
+++ b/pages/subpages/gift/index.wxss
@@ -23,54 +23,68 @@
   height: 34px;
 }
 
-.notice {
+.illus {
   display: block;
-  margin: 0 auto;
-  width: 724rpx;
-  height: 502rpx;
+  margin: 50rpx auto 0;
+  width: 600rpx;
+  height: 410rpx;
 }
 
 .goods-list-wrap {
   position: relative;
-  margin-top: 24rpx;
+  margin-top: 80rpx;
   padding: 20rpx;
   width: 100%;
-  background: linear-gradient( 90deg, #85CFFC 0%, #FDF368 100%);
-  box-shadow: inset 8px 8px 12px 0px rgba(255,255,255,0.6);
+  background: linear-gradient(180deg, #F2FFF3 0%, #E6FFE7 100%);
   border-radius: 48rpx 48rpx 0 0;
 }
 
-.flower-illus {
+.process {
   position: absolute;
-  top: -147rpx;
-  right: 24rpx;
-  width: 151rpx;
-  height: 147rpx;
+  top: -78rpx;
+  left: 0;
+  width: 100vw;
+  height: 168rpx;
+  z-index: -1;
 }
 
 .menu {
-  padding: 0 4rpx;
+  padding: 0 6rpx;
   width: 100%;
   height: 68rpx;
-  background: rgba(255,255,255,0.6);
+  background: #A3DB62;
   border-radius: 34rpx;
 }
 .menu-item {
+  position: relative;
   flex: 1;
-  height: 60rpx;
-  color: #666;
+  height: 56rpx;
+  color: rgba(255, 255, 255, 0.8);
   font-size: 26rpx;
+  font-weight: bold;
+  font-style: italic;
   border-radius: 30rpx;
 }
 .menu-item.active {
-  color: #fff;
-  font-weight: 500;
-  background: #00C8FF;
+  color: #000;
+  font-weight: bolder;
+  background: #FAFEE6;
+}
+.menu-item-content {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  white-space: nowrap;
+}
+.active-tag {
+  width: 77rpx;
+  height: 20rpx;
 }
 
 .goods-list {
   margin-top: 20rpx;
-  height: calc(100vh - 710rpx);
+  height: calc(100vh - 720rpx);
   overflow-y: scroll;
 }
 
