--- a/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
+++ b/pages/subpages/mall/goods/subpages/goods-detail/index.wxss
@@ -63,7 +63,7 @@ page {
 .customer-banner {
   position: absolute;
   left: 0;
-  bottom: 50rpx;
+  bottom: 78rpx;
   width: 100%;
   height: 50rpx;
 }
@@ -101,7 +101,7 @@ page {
 .banner-dots, .banner-dots-menu {
   position: absolute;
   right: 24rpx;
-  bottom: 50rpx;
+  bottom: 78rpx;
   height: 50rpx;
   font-weight: bold;
   background: rgba(0, 0, 0, 0.3);
@@ -138,9 +138,33 @@ page {
 .wrap {
   position: absolute;
   left: 0;
-  top: 968rpx;
+  top: 840rpx;
   width: 100%;
 }
+.wrap.gift {
+  background-image: url('https://static.tiddler.cn/mp/gift_bar.png');
+  background-size: 100% 168rpx;
+  background-repeat: no-repeat;
+}
+
+.gift-bar {
+  position: relative;
+  height: 100rpx;
+}
+.gift-duration {
+  position: absolute;
+  right: 26rpx;
+  bottom: 24rpx;
+  padding: 0 12rpx;
+  height: 42rpx;
+  color: #fff;
+  font-size: 24rpx;
+  font-weight: 500;
+  font-style: italic;
+  border-radius: 21rpx;
+  background: #3FC3F4;
+}
+
 .goods-info-wrap {
   padding: 32rpx;
   border-radius: 32rpx;
@@ -161,12 +185,13 @@ page {
 .commission-tag {
   display: flex;
   align-items: center;
-  margin-left: 32rpx;
+  margin-left: 24rpx;
+  margin-bottom: 2rpx;
   padding: 0 20rpx;
   height: 50rpx;
   color: #fff;
   font-size: 24rpx;
-  background: #f8305a;
+  background: #FD2D55;
   border-radius: 25rpx;
 }
 .commission-visible-icon {
@@ -183,17 +208,17 @@ page {
 }
 
 .goods-name {
-  margin-top: 32rpx;
+  margin-top: 18rpx;
   color: #141925;
-  font-size: 34rpx;
+  font-size: 32rpx;
   font-weight: 600;
 }
 .self-support-icon {
   margin-right: 12rpx;
   margin-bottom: 6rpx;
   vertical-align: bottom;
-  width: 68rpx;
-  height: 38rpx;
+  width: 57.5rpx;
+  height: 32rpx;
 }
 .goods-intro {
   margin-top: 18rpx;
