--- a/pages/subpages/gift/index.wxml
+++ b/pages/subpages/gift/index.wxml
@@ -1,32 +1,40 @@
+<view class="nav-bar-wrap {{navBarVisible ? 'show' : ''}}" style="padding-top: {{statusBarHeight}}px;">
+  <view class="nav-bar row">
+    <view style="flex: 1;">
+      <back-icon custom="{{custom}}" bind:navigateBack="navigateBack" />
+    </view>
+    <view class="title" wx:if="{{navBarVisible}}">家乡好物</view>
+    <view style="flex: 1;"></view>
+  </view>
+</view>
+
 <view class="container">
   <image class="bg" src="https://static.tiddler.cn/mp/gift/bg.png" mode="widthFix" />
 
-  <view class="back-icon-wrap" style="top: {{statusBarHeight + 5}}px">
-    <back-icon />
-  </view>
-
   <image class="illus" src="https://static.tiddler.cn/mp/gift/illus.png" />
 
-  <view class="goods-list-wrap">
+  <view class="goods-list-wrap {{navBarVisible ? 'fixed' : ''}}">
     <image class="process" src="https://static.tiddler.cn/mp/gift/process.png" />
 
-    <view class="menu row">
-      <view 
-        class="menu-item row center {{curMenuIdx === index ? 'active' : ''}}" 
-        wx:for="{{['爱心助农', '家乡特产', '童年回忆', '文创周边']}}" 
-        wx:key="index"
-        bindtap="selectMenu"
-        data-index="{{index}}"
-      >
-        <image class="active-tag" wx:if="{{curMenuIdx === index}}" src="https://static.tiddler.cn/mp/gift/active.png" />
-        <view class="menu-item-content">{{item}}</view>
+    <view class="menu-wrap {{navBarVisible ? 'fixed' : ''}}" style="top: {{statusBarHeight + 44}}px;">
+      <view class="menu row">
+        <view 
+          class="menu-item row center {{curMenuIdx === index ? 'active' : ''}}" 
+          wx:for="{{['爱心助农', '家乡特产', '童年回忆', '文创周边']}}" 
+          wx:key="index"
+          bindtap="selectMenu"
+          data-index="{{index}}"
+        >
+          <image class="active-tag" wx:if="{{curMenuIdx === index}}" src="https://static.tiddler.cn/mp/gift/active.png" />
+          <view class="menu-item-content">{{item}}</view>
+        </view>
       </view>
     </view>
 
-    <scroll-view class="goods-list" bindscrolltolower="loadMore" scroll-y enhanced show-scrollbar="{{false}}">
+    <view class="goods-list">
       <fall-flow wx:if="{{goodsList}}" list="{{goodsList}}" generic:item="goods-item" isGift />
       <empty-illus wx:if="{{finished && !goodsList.length}}" desc="暂无家乡好物" />
       <view class="no-more-tips" wx:if="{{finished && goodsList.length}}">～没有更多了～</view>
-    </scroll-view>
+    </view>
   </view>
 </view>
