feat: tabbar padding-bottom

--- a/custom-tab-bar/index.wxml
+++ b/custom-tab-bar/index.wxml
@@ -1,4 +1,4 @@
-<view class="tab-bar">
+<view class="tab-bar" style="padding-bottom: {{safeAreaInsetBottom}}px;">
   <view class="tab" bindtap="switchTab" data-path="/pages/tab-bar-pages/home/index">
     <image class="icon" src="/images/tab-bar/home{{tabType === 'home' ? '_fill' : ''}}.png" />
     <view class="text {{tabType === 'home' ? 'selected' : ''}}">首页</view>
